--- a/src/main/resources/META-INF/resources/frontend/styles.css
+++ b/src/main/resources/META-INF/resources/frontend/styles.css
@@ -1,21 +1,16 @@
 /* Some extra styling for header. */
 h1 {
-    font-size: var(--lumo-font-size-xxl);
-    color: var(--lumo-primary-text-color);
-    background-color: var(--lumo-shade-10pct);
-    border-radius: var(--lumo-border-radius);
+    color: darkblue;
     width: 100%;
-    padding: 0 0 0 10px;
-    margin: 10px 0;
+    text-align: center;
+}
+
+/* Make layout bit more compact. */
+.message-layout p {
+    margin: 0;
 }
 
 /* We want the chat view to scroll vertically instead. */
 .message-layout {
-   overflow-y: scroll;
-}
-
-
-/* Make layout bit more compact. */
-.message-layout label {
-    margin: 0;
+    overflow-y: scroll;
 }
